# CorBiCore

./: .gitignore  CMakeLists.txt  CorBiCore  README.md  main.cpp
fftsg/: changes.md  fftsgConfig.cmake
fftsg/include/fftsg/: fft_engine.hpp
